# wxsqlite3

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CNAME  COPYING.txt  LICENSE.spdx  Makefile.am  Makefile.in  Makefile28.in  Makefile29.in  Makefile30.in  Readme.txt  WxWindows-exception-3.1.txt  configure  configure.ac  configure28  configure29  configure30  index.html  premake4.lua  premake5.lua  readme.md  wxsqlite3.pc  wxsqlite3.pc.in
.github/: FUNDING.yml
.github/workflows/: ci4wxsqlite3.yml
admin/aclocal/: bakefile-dllar.m4  bakefile-lang.m4  bakefile.m4
admin/appveyor/: appveyor-test.bat  appveyor.bat
build28/: Bakefiles.bkgen  GNUmakefile  Info.plist.in  aclocal.m4  acregen.sh  autoconf_inc.m4  configure.ac  makefile.bcc  makefile.gcc  makefile.vc  makefile.wat  wxsqlite3.bkl  wxsqlite3_vc6.dsw  wxsqlite3_vc6_minimal.dsp  wxsqlite3_vc6_treeview.dsp  wxsqlite3_vc6_wxsqlite3.dsp  wxsqlite3_vc7.sln  wxsqlite3_vc7_minimal.vcproj  wxsqlite3_vc7_treeview.vcproj  wxsqlite3_vc7_wxsqlite3.vcproj  wxsqlite3_vc8.sln  wxsqlite3_vc8_minimal.vcproj  wxsqlite3_vc8_treeview.vcproj  wxsqlite3_vc8_wxsqlite3.vcproj  wxsqlite3_vc9.sln  wxsqlite3_vc9_minimal.vcproj  wxsqlite3_vc9_treeview.vcproj  wxsqlite3_vc9_wxsqlite3.vcproj
build29/: Bakefiles-w64.bkgen  GNUmakefile  configure.ac  makefile.bcc  makefile.gcc  makefile.vc  makefile.wat  wxsqlite3.bkl  wxsqlite3_vc6.dsw  wxsqlite3_vc6_dbadmin.dsp  wxsqlite3_vc6_treeview.dsp  wxsqlite3_vc6_wxsqlite3.dsp  wxsqlite3_vc7_dbadmin.vcproj  wxsqlite3_vc7_wxsqlite3.vcproj  wxsqlite3_vc8.sln  wxsqlite3_vc8_minimal.vcproj  wxsqlite3_vc8_wxsqlite3.vcproj  wxsqlite3_vc9.sln  wxsqlite3_vc9_minimal.vcproj  wxsqlite3_vc9_treeview.vcproj  wxsqlite3_vc9_wxsqlite3.vcproj
build30/: Bakefiles.bkgen  GNUmakefile  autoconf_inc.m4  configure.ac  mac_bundles.bkl  makefile.bcc  makefile.gcc  makefile.vc  makefile.wat  wxsqlite3.bkl  wxsqlite3_vc10_libsqlite3.vcxproj  wxsqlite3_vc10_libsqlite3.vcxproj.filters  wxsqlite3_vc10_minimal.vcxproj  wxsqlite3_vc10_treeview.vcxproj  wxsqlite3_vc10_wxsqlite3.vcxproj  wxsqlite3_vc11.sln  wxsqlite3_vc11_minimal.vcxproj  wxsqlite3_vc11_treeview.vcxproj  wxsqlite3_vc11_wxsqlite3.vcxproj  wxsqlite3_vc12.sln  wxsqlite3_vc12_libsqlite3.vcxproj  wxsqlite3_vc12_minimal.vcxproj  wxsqlite3_vc12_treeview.vcxproj  wxsqlite3_vc12_wxsqlite3.vcxproj  wxsqlite3_vc14.sln  wxsqlite3_vc14_minimal.vcxproj  wxsqlite3_vc14_treeview.vcxproj  wxsqlite3_vc14_wxsqlite3.vcxproj  wxsqlite3_vc6_minimal.dsp  wxsqlite3_vc6_treeview.dsp  wxsqlite3_vc7_minimal.vcproj  wxsqlite3_vc7_treeview.vcproj  wxsqlite3_vc7_wxsqlite3.vcproj  wxsqlite3_vc8.sln  wxsqlite3_vc8_treeview.vcproj  wxsqlite3_vc9.sln  wxsqlite3_vc9_minimal.vcproj  wxsqlite3_vc9_treeview.vcproj
build31/: wxsqlite3_vc10.sln  wxsqlite3_vc10_minimal.vcxproj  wxsqlite3_vc10_treeview.vcxproj  wxsqlite3_vc10_wxsqlite3.vcxproj  wxsqlite3_vc10_wxsqlite3.vcxproj.filters  wxsqlite3_vc11_libsqlite3.vcxproj  wxsqlite3_vc11_minimal.vcxproj  wxsqlite3_vc11_treeview.vcxproj  wxsqlite3_vc11_wxsqlite3.vcxproj  wxsqlite3_vc12_minimal.vcxproj  wxsqlite3_vc12_treeview.vcxproj  wxsqlite3_vc12_wxsqlite3.vcxproj  wxsqlite3_vc14_libsqlite3.vcxproj  wxsqlite3_vc14_minimal.vcxproj  wxsqlite3_vc14_treeview.vcxproj  wxsqlite3_vc14_treeview.vcxproj.filters  wxsqlite3_vc14_wxsqlite3.vcxproj
dbadmin/: aboutdlg.h  backrestdlg.cpp  backrestdlg.h  blobdlg.cpp  blobdlg.h  change.txt  createindex.h  createtable.cpp  createtable.h  dbbook.h  describedlg.h  dropobject.cpp  dropobject.h  encrypkeydlg.cpp  encrypkeydlg.h  essai.db  filterdlg.h  gpl-3.0.html  ipcframe.cpp  paneldata.cpp  paneldata.h  preferences.cpp  sortdlg.cpp  sortdlg.h  specgrid.cpp  specgrid.h  sqleditor.cpp  sqlhistory.h  sqlite3table.cpp  sqlite3table.h  tablebook.cpp  tablebook.h  test2.db  todo.txt  toto.db  triggerbook.cpp  triggerbook.h  viewbook.cpp
dbadmin/images/: add.xpm  alltoleft.xpm  alltoright.xpm  attachdb.xpm  autotransact.xpm  bookindexe.xpm  booktable.xpm  booktrigger.xpm  clear.xpm  coldown.xpm  colup.xpm  commit.xpm  compactdb.xpm  connect.xpm  connect2.xpm  copy.xpm  createdb.xpm  cut.xpm  database.xpm  dbdrop.xpm  dbnew.xpm  down.xpm  edit.xpm  explain.xpm  field.xpm  field2.xpm  filter.xpm  first.xpm  indexe.xpm  indexe_tmp.xpm  indexecreate.xpm  indexedrop.xpm  indexes.xpm  last.xpm  left.xpm  leftarrow1.xpm  leftarrow2.xpm  log.xpm  logo128.xpm  logo32.xpm  (+37 more)
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  classes.html  classwx_s_q_lite3_aggregate_function-members.html  classwx_s_q_lite3_aggregate_function.html  classwx_s_q_lite3_aggregate_function.js  classwx_s_q_lite3_authorizer-members.html  classwx_s_q_lite3_authorizer.html  classwx_s_q_lite3_authorizer.js  classwx_s_q_lite3_backup_progress-members.html  classwx_s_q_lite3_backup_progress.html  classwx_s_q_lite3_backup_progress.js  classwx_s_q_lite3_blob-members.html  classwx_s_q_lite3_blob.html  classwx_s_q_lite3_blob.js  classwx_s_q_lite3_blob_reference-members.html  classwx_s_q_lite3_blob_reference.html  classwx_s_q_lite3_blob_reference.js  classwx_s_q_lite3_cipher-members.html  (+178 more)
premake/: wxwidgets.lua
samples/: minimal.cpp  persons-aegis-testkey.db3  persons-ascon128-testkey.db3
sqlite3/: Readme.txt
sqlite3secure/: Makefile.am  configure.ac  premake5.lua  readme-precompiled.md  readme.md  rekeyvacuum.sh  sqlite3secure.pc.in
sqlite3secure/src/: chacha20poly1305.c  codec.c  codec.h  codecext.c  csv.c  extensionfunctions.c  fastpbkdf2.c  fastpbkdf2.h  fileio.c  filelist.md  mystdint.h  rekeyvacuum.c  rijndael.c  rijndael.h  sha1.c  sha2.c  sha2.h  shathree.c  shell.c  sqlite3.def  sqlite3.h  sqlite3.rc  sqlite3ext.h  sqlite3secure.c  sqlite3secure.h  sqlite3shell.rc  sqlite3userauth.h  userauth.c
sqlite3secure/test/: setaes128wx.sql  setaes128wxlegacy.sql  setaes256wx.sql  setaes256wxlegacy.sql  setchacha20sqleet.sql  setchacha20wx.sql  setsqlcipher1.sql  setsqlcipher2.sql  setsqlcipher3.sql  setsqlcipherwx.sql
src/: sqlite3mc_amalgamation.h  sqlite3mc_config.h  wxsqlite3.cpp  wxsqlite3_version.rc
website/: index.php
(+391 files in other folders)
